feat: Add Http response log.
Http logging in Retrofit using OKHttp. Enabled it for development build only.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    //HttpLoggingInterceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+
 }
